# powermail

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  TODO  acconfig.h  ahuexception.hh  argsettings.cc  argsettings.hh  bootstrap  common.cc  common.hh  config.h.in  configure  configure.ac  configure.in  delivery.cc  delivery.hh  imapsession.cc  imapsession.hh  lock.hh  logger.cc  logger.hh  mailboxes.dist  make.init.d.in  mboxdir.cc  md5.cc  md5.hh  megatalker.cc  megatalker.hh  misc.cc  misc.hh  missing  mkinstalldirs  pool.hh  popsession.cc  popsession.hh  powerimap.cc  powermail.spec  (+29 more)
codedocs/: Makefile.am
debian/: changelog  control  copyright  doc-base  powermail-doc.postinst  powermail-doc.prerm  powermail.conffiles  powermail.postinst  powermail.postrm  powermail.prerm  rules
docs/: .cvsignore  Makefile  database-layout.txt  powermail-concepts.sgml  powermail-install.sgml  powermail.db  powermail.sgml  powermail.txt  wuh
docs/html/: best-practice.html  catch-all.html  configuration.html  email.html  forwarding.html  indepth.html  index.html  insight.html  introduction.html  mboxdir.html  multiple-hosts.html  mysqlpdns.html  mysqlsimple-pdns.html  postgresql.html  powerpop-and-smtp.html  quickstart.html  quotas.html  redundancy-practice.html  redundancy.html  release-1-0-0.html  release-1-1-0.html  release-1-2-0.html  release-1-3-1.html  release-1-3.html  release-notes.html  roadmap.html  simple-install.html  t495.html  text-base.html  userbases.html  x107.html  x491.html  x495.html  x568.html  x572.html  x580.html  x584.html  x621.html  x625.html  x626.html  (+8 more)
userbases/: Makefile.am
userbases/ldap/: Makefile.am  OBJECTFILES  OBJECTLIBS  ldap.cc  ldap.hh  powerldap.cc  powerldap.hh
userbases/mysqlpdns/: Makefile.am  OBJECTFILES  mysqlpdns.cc  mysqlpdns.hh
userbases/mysqlplain/: Makefile.am  OBJECTFILES  mysqlplain.cc  mysqlplain.hh
userbases/mysqlsimplepdns/: Makefile.am  OBJECTFILES  mysqlsimplepdns.cc  mysqlsimplepdns.hh
userbases/oracle/: Makefile.am  OBJECTFILES  OBJECTLIBS  oracle.cc  oracle.hh
userbases/postgresql/: Makefile.am  OBJECTFILES  OBJECTLIBS  postgresql.cc  postgresql.hh
userbases/text/: Makefile.am  OBJECTFILES  OBJECTLIBS  textbase.cc  textbase.hh  textlexer.c  textlexer.l  textparser.cc  textparser.h  textparser.hh  textparser.yy
